tests/files/lexer_tests/should_fail/029.cmdr
// Illegal character in string (ascii 29)
var = '';